--- a/alienArmada.css
+++ b/alienArmada.css
@@ -1,7 +1,7 @@
 @font-face
 {
  font-family: emulogic;
- src: url("../fonts/emulogic.ttf");
+ src: url("emulogic.ttf");
 }
 drawingSurface.font = "normal bold 18px Helvetica";
 drawingSurface.fillStyle = "#000";
